--- a/document_type.html
+++ b/document_type.html
@@ -5,6 +5,6 @@
 	<title></title>
 </head>
 <body>
-<p>Coursera is So cool <span>Happy</span>Learning</p>
+<p>Coursera is So cool <span>Happy</span> <sub>Learning </sub> </p>
 </body>
 </html>
