--- a/document_type.html
+++ b/document_type.html
@@ -5,6 +5,9 @@
 	<title></title>
 </head>
 <body>
+	<div>div1:This is div1 element</div>
+	<div>div2:This is div2 element</div>
+	<span>This is span element</span>
 <p>Coursera is So cool <span>Happy</span> <sub>Learning </sub> </p>
 </body>
 </html>
